Revert "Fix images stretching on IE 11"
This reverts commit bbaf40ddaa55a9277dbce7e078cc385ebef8057f.

--- a/great-western-wine-theme/assets/scss/components/stencil/productView/_productView.scss
+++ b/great-western-wine-theme/assets/scss/components/stencil/productView/_productView.scss
@@ -54,7 +54,7 @@
     img {
         @include lazy-loaded-img;
         max-height: 100%;
-        width: auto;
+        width: 100%;
         object-fit: contain;
         /* Object-fit polyfill */
         font-family: 'object-fit: contain;';
